--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "unplugin-auto-import": "^0.16.0",
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.3.2",
+    "vite-plugin-compression": "^0.5.1",
     "vue-tsc": "^1.4.2"
   }
 }
